[package]
name = "cpuminer-rust"
version = "0.1.0"
edition = "2021"
# edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23"
strum_macros = "0.23"
structopt = "0.3"

# Algorithms
rand = "0.8"
password-hash = "0.3"
pbkdf2 = "0.10"
# bitcoin_hashes = "0.10.0"
# bc4py_hash = {version = "0.1", features= ["hashs", "poc"]}
